Fix dropdown gap, headings line height and truncate title in nav

--- a/_sass/default/elements/_heading.sass
+++ b/_sass/default/elements/_heading.sass
@@ -3,6 +3,7 @@ h1, h2, h3, h4, h5, h6
 
 h1, h2, h3
   font-weight: $headings-weight
+  line-height: 1.2
 
 // Spacing
 @for $index from 1 through length($headings-margins)
