--- a/_sass/default/elements/_list.sass
+++ b/_sass/default/elements/_list.sass
@@ -11,7 +11,7 @@ main
   li
     margin-bottom: $space/3
   ul ul
-    margin-top: $space/3
+    margin-top: 0
 footer li
   margin-bottom: 0
 
